<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">App To Date</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="login">Login</string>
    <string name="title_activity_main">Hauptmenü</string>
    <string name="addAppointment">+</string>
    <string name="textPersonName">sipabueh</string>
    <string name="textPersonCourse">IMUK</string>
    <string name="textPersonSemester">6. Semester</string>
    <string name="personSettings">settings</string>
    <string name="sampleMessage">Lorem Ipsum</string>
    <string name="appointmentDescription">Beschreibung:</string>
    <string name="appointmentDate">Datum:</string>
    <string name="appointmentClock">Uhrzeit:</string>
    <string name="appointmentLocation">Ort:</string>
    <string name="appointmentSignIn">Eintragen</string>
    <string name="appointmentTrash">Verwerfen</string>
    <string name="friendsFakultät">Fakultät:</string>
    <string name="friendsStudiengang">Studiengang:</string>
    <string name="friendsSemester">Semester:</string>
    <string name="title_activity_termin_eintragen">TerminEintragen</string>
    <string name="title_activity_inbox">InboxActivity</string>
    <string name="appointmentTitle">Title:</string>
    <string name="title_activity_event_view">Termine anzeigen</string>
    <string name="appointmentSuccessfullInserted">Der Termin wurde erfolgreich hinzugefügt</string>

</resources>

